--- a/src/main/resources/templates/board/editForm.html
+++ b/src/main/resources/templates/board/editForm.html
@@ -70,7 +70,7 @@
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <script src="/static/js/ckeditor5/build/ckeditor.js" th:src="@{/js/ckeditor5/build/ckeditor.js}"></script>
     <script>
-        $(document).ready(function () {
+        $(function () {
 
             // CKeditor
             ClassicEditor
