--- a/src/main/resources/templates/member/infoForm.html
+++ b/src/main/resources/templates/member/infoForm.html
@@ -52,7 +52,7 @@
     </style>
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <script>
-        $(document).ready(function () {
+        $(function () {
 
             let alertMessage = $("#globalAlertMessage").data("alertmessage");
             if (alertMessage) {
