--- a/src/main/resources/templates/member/myBoard.html
+++ b/src/main/resources/templates/member/myBoard.html
@@ -79,7 +79,7 @@
     </style>
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <script>
-        $(document).ready(function () {
+        $(function () {
 
             // 내부 네비바 active
             $(".nav-pills .nav-link").on({
