--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -81,28 +81,31 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/nav-css.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}" href="/static/css/global.css">
     <script>
-        $(document).ready(function () {
+        $(function () {
 
-            let alertMessage = $("#globalAlertMessage").data("alertmessage");
-            let isLogout = $("#globalAlertMessage > #isLogout").data("islogout");
+            $(window).on("load", function () {
+                let alertMessage = $("#globalAlertMessage").data("alertmessage");
+                let isLogout = $("#globalAlertMessage > #isLogout").data("islogout");
 
-            // console.log("alertMessage = " + alertMessage + " isLogout = " + isLogout);
+                // console.log("alertMessage = " + alertMessage + " isLogout = " + isLogout);
 
-            if (alertMessage) {
-                // 홈화면(/board/list/all) 추가동작
-                if (alertMessage == "oauth2_add") {
-                    if (confirm("해당 소셜 계정으로 가입된 회원이 없습니다. 가입 하시겠습니까?")) {
-                        location.replace("/member/add");
-                    } else {
+                if (alertMessage) {
+                    // 홈화면(/board/list/all) 추가동작
+                    if (alertMessage == "oauth2_add") {
+                        if (confirm("해당 소셜 계정으로 가입된 회원이 없습니다. 가입 하시겠습니까?")) {
+                            location.replace("/member/add");
+                        } else {
+                            location.replace("/logout");
+                        }
+                    }
+
+                    alert(alertMessage);
+                    if (isLogout) {
                         location.replace("/logout");
                     }
                 }
+            })
 
-                alert(alertMessage);
-                if (isLogout) {
-                    location.replace("/logout");
-                }
-            }
 
             let searchForm = $("#searchForm");
             $("#searchForm>button").on("click", function (event) {
