--- a/src/main/resources/templates/member/addForm.html
+++ b/src/main/resources/templates/member/addForm.html
@@ -50,7 +50,7 @@
     </style>
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <script>
-        $(document).ready(function () {
+        $(function () {
 
             let alertMessage = $("#globalAlertMessage").data("alertmessage");
             if (alertMessage) {
