--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -90,13 +90,15 @@
                 // console.log("alertMessage = " + alertMessage + " isLogout = " + isLogout);
 
                 if (alertMessage) {
-                    // 홈화면(/board/list/all) 추가동작
+                    // 홈 화면 추가동작
                     if (alertMessage == "oauth2_add") {
                         if (confirm("해당 소셜 계정으로 가입된 회원이 없습니다. 가입 하시겠습니까?")) {
-                            location.replace("/member/add");
+                            location.replace("/member/add-oauth");
                         } else {
                             location.replace("/logout");
                         }
+                        // 이상하게 return 안하면 아래까지 실행하고 이동하려고 함;
+                        return;
                     }
 
                     alert(alertMessage);
@@ -142,20 +144,32 @@
                 })
             }
 
-            // 검색중일때 .page-link.onclick, option 은 검색하면 criteria.option 으로 자동으로 들어감
+            // 페이지네이션 링크 클릭
             $(".page-link").on("click", function (event) {
+                event.preventDefault();
 
+                // currentPage 설정
+                $("#pageInfo>input:first-child").attr("value", $(this).attr("data-pagenum"));
+                // option 값 확인
                 let option = $("#pageInfo>input[name = 'option']").val();
 
-                if (option == null || option == "") {
-                    // option 없음 = 원래이벤트
-                    location.href = event.target.href;
-                    return false;
+                // option 없음 = 검색 안함 (url 빈 파라미터 지우기)
+                if (!option) {
+                    $("#pageInfo>input.searching").remove();
                 }
 
-                $("#pageInfo>input:first-child").attr("value", $(this).attr("data-pagenum"));
                 $("#pageInfo").submit();
-                return false;
+            })
+
+            // 읽기 링크 클릭
+            $(".readLink").on("click", function (event) {
+                event.preventDefault();
+                let params = location.search;
+                if (params) {
+                    location.href = $(this).attr("href") + params;
+                } else {
+                    location.href = $(this).attr("href");
+                }
             })
         })
     </script>
@@ -210,21 +224,14 @@
                 th:with="currentPage=${param.currentPage == null} ? 1 : ${param.currentPage}">
                 <!-- totalCount - cri.contentPerPage * (currentPage - 1) - i -->
                 <td id="boardNum" th:text="${pageMaker.totalCount - criteria.contentPerPage * (pageMaker.currentPage - 1) - itemStat.index}">id</td>
-                <!--검색안함-->
-                <td th:if="${criteria.option == null}">
+
+                <td>
                     <!-- if(Category == ALL) categoryCode = "" ;-->
                     <span class="category-label" th:if="${pageMaker.categoryCode == 'all'}" th:text="${'[' + item.category.getCategoryName() + ']'}"></span>
-                    <a id="readLink" href="list.html"
-                       th:href="@{|/board/read/${pageMaker.categoryCode}/${item.id}?currentPage=${currentPage}|}"
+                    <a class="readLink" href="read.html" th:href="@{|/board/${item.id}|}"
                        th:text="${item.title}">title</a>
                 </td>
-                <!--검색중-->
-                <td th:if="${criteria.option != null}">
-                    <span class="category-label" th:if="${pageMaker.categoryCode == 'all'}" th:text="${'[' + item.category.getCategoryName() + ']'}"></span>
-                    <a id="readLink2" href="list.html"
-                       th:href="@{|/board/read/${pageMaker.categoryCode}/${item.id}?currentPage=${currentPage}&option=${criteria.option}&keyword=${criteria.keyword}|}"
-                       th:text="${item.title}">title</a>
-                </td>
+
                 <td th:text="${item.writer}">writer</td>
 
                 <td th:if="${item.isToday(item.regDate)}" th:text="${#temporals.format(item.regDate, 'HH:mm')}">regdate</td>
@@ -239,22 +246,22 @@
         </table>
 
 
-    <!-- a 태그들의 th:href 는 검색중이 아닐때만 사용, 검색중일때는 자바스크립트 사용 (if selectOption != none) -->
+    <!-- onclick 시 자바스크립트 실행을 통해 pageInfo 를 submit 하게됨 -->
     <!-- pagination -->
     <div class="container">
         <ul class="pagination col justify-content-center" id="paginationContainer">
             <li class="page-item" th:if="${pageMaker.isPrevBt}">
-                <a th:href="@{|/board/list/${pageMaker.getCategoryCode()}?currentPage=${(pageMaker.startPageNum)-1}|}"
+                <a href="list.html"
                    th:data-pageNum="${(pageMaker.startPageNum)-1}" class="page-link">&laquo;</a>
             </li>
             <!-- ${#numbers.sequence(from,to,[step])} 단순반복 numbers 유틸리티 클래스 배열 생성후 사용 -->
             <!--    <li th:each="num : ${#numbers.sequence(${pageMaker.startPageNum},${pageMaker.endPageNum})}">-->
             <li class="page-item page-item-number" th:each="num : ${#numbers.sequence(pageMaker.startPageNum, pageMaker.endPageNum)}">
-                <a th:href="@{|/board/list/${pageMaker.getCategoryCode()}?currentPage=${num}|}" th:text="${num}" th:data-pagenum="${num}"
+                <a href="list.html" th:text="${num}" th:data-pagenum="${num}"
                    class="page-link page-link-number"> 페이지번호 </a>
             </li>
             <li class="page-item" th:if="${pageMaker.isNextBt()}">
-                <a th:href="@{|/board/list/${pageMaker.getCategoryCode()}?currentPage=${pageMaker.endPageNum+1}|}"
+                <a href="list.html"
                    th:data-pageNum="${pageMaker.endPageNum+1}" class="page-link">&raquo;</a>
             </li>
         </ul>
@@ -264,17 +271,17 @@
     <!-- 글쓰기 버튼 -->
     <div class="float-right" id="write">
         <button type="button" class="btn btn-primary" th:if="${criteria.categoryCode.equals('notice')}" sec:authorize="hasRole('ROLE_ADMIN')"
-                th:onclick="|location.href='@{/board/write/{categoryCode}(categoryCode=${criteria.getCategoryCode})}'|">글쓰기</button>
+                th:onclick="|location.href='@{/board/write(categoryCode=${criteria.getCategoryCode})}'|">글쓰기</button>
         <button type="button" class="btn btn-primary" th:unless="${criteria.categoryCode.equals('notice')}"
-                th:onclick="|location.href='@{/board/write/{categoryCode}(categoryCode=${criteria.getCategoryCode})}'|">글쓰기</button>
+                th:onclick="|location.href='@{/board/write(categoryCode=${criteria.getCategoryCode})}'|">글쓰기</button>
     </div>
 
     <!-- 검색창 -->
     <div class="row justify-content-center input-group" style="clear:right;width:500px;margin:auto">
         <!-- th:action 태그는 javascript 를 통해 submit 할떄 적용되지 않는 것으로 보임 -->
         <!-- method = get 이므로 form 데이터가 queryString 에 붙어나감 -->
-        <form id="searchForm" action="/board/list" method="get"
-              th:action="@{|/board/list/${pageMaker.categoryCode}|}" th:object="${criteria}">
+        <form id="searchForm" action="/boards" method="get"
+              th:action="@{/boards}" th:object="${criteria}">
             <input type="hidden" name="currentPage" value="1">
             <select th:field="*{option}" name="option" class="form-select" id="searchOption">
                 <option value="">전체보기</option>
@@ -282,6 +289,7 @@
                 <option value="content">내용</option>
             </select>
             <input id="searchKeyword" type="text" th:field="*{keyword}" name="keyword" class="form-control"/>
+            <input type="hidden" th:name="categoryCode" th:value="${criteria.categoryCode}">
             <button class="btn btn-primary btn-sm">검색</button>
         </form>
     </div>
@@ -289,8 +297,9 @@
     <!-- 검색 및 현재페이지 정보 -->
     <form id="pageInfo" method="get">
         <input type="hidden" th:name="currentPage" th:value="${criteria.currentPage}">
-        <input type="hidden" name="option" th:name="option" th:value="${criteria.option}">
-        <input type="hidden" th:name="keyword" th:value="${criteria.keyword}">
+        <input type="hidden" th:name="categoryCode" th:value="${criteria.categoryCode}">
+        <input class="searching" type="hidden" th:name="option" th:value="${criteria.option}">
+        <input class="searching" type="hidden" th:name="keyword" th:value="${criteria.keyword}">
     </form>
 
 </div>
