--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -8,7 +8,7 @@
 <h2> 403 에러 </h2>
 <p> 해당 페이지에 접근 권한이 없습니다. </p>
 <button type="button" onclick="location.href='list.html'"
-        th:onclick="|location.href='@{/board/list/all}'|">
+        th:onclick="|location.href='@{/boards}'|">
   홈으로 돌아가기
 </button>
 </body>
