--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -7,7 +7,7 @@
 <body>
     <h2> 500 에러 </h2>
     <button type="button" onclick="location.href='list.html'"
-            th:onclick="|location.href='@{/board/list/all}'|">
+            th:onclick="|location.href='@{/boards}'|">
         홈으로 돌아가기
 </button>
 </body>
