--- a/src/main/resources/templates/fragment/fragment.html
+++ b/src/main/resources/templates/fragment/fragment.html
@@ -14,26 +14,26 @@
 
 <nav th:fragment="nav-fragment" id="globalNavbar" class="navbar navbar-expand-md navbar-dark bg-primary bg-gradient fixed-top">
     <div class="container-fluid" id="navBarContainer">
-        <a class="navbar-brand text-light" href="/board/list/all" aria-current="page" id="navHeader">게시판</a>
+        <a class="navbar-brand text-light" href="/boards" aria-current="page" id="navHeader">게시판</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a href="/board/list/free" class="nav-link">자유</a>
+                    <a href="/boards?categoryCode=free" class="nav-link">자유</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/board/list/issue" class="nav-link" >이슈</a>
+                    <a href="/boards?categoryCode=issue" class="nav-link" >이슈</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/board/list/economy" class="nav-link">경제</a>
+                    <a href="/boards?categoryCode=economy" class="nav-link">경제</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/board/list/cs" class="nav-link">문의</a>
+                    <a href="/boards?categoryCode=cs" class="nav-link">문의</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/board/list/notice" class="nav-link">공지</a>
+                    <a href="/boards?categoryCode=notice" class="nav-link">공지</a>
                 </li>
             </ul>
             <div class="d-flex justify-content-end">
@@ -43,9 +43,6 @@
                             <button class="btn btn-sm btn-light me-2" type="button"
                                     onclick="location.href='loginForm.html'"
                                     th:onclick="|location.href='@{/login}'|">로그인 / 회원가입</button>
-<!--                            <button class="btn btn-sm btn-light" type="button"-->
-<!--                                    onclick="location.href='addForm.html'"-->
-<!--                                    th:onclick="|location.href='@{/member/add}'|">회원가입</button>-->
                         </form>
                     </li>
                     <li id="loginMessage" class="nav-item" sec:authorize="hasAnyRole('ROLE_USER', 'ROLE_ADMIN')">
@@ -56,7 +53,7 @@
                     <li class="nav-item" sec:authorize="hasAnyRole('ROLE_USER', 'ROLE_ADMIN')">
                         <form class="container-fluid loginBtBox">
                             <button class="btn btn-sm btn-light me-2" type="button"
-                                    th:onclick="|location.href='@{/member/mypage/myboard}'|" id="memberEditBt">마이 페이지</button>
+                                    th:onclick="|location.href='@{/member/{memberId}/boards(memberId=${#authentication.principal.member.id})}'|" id="memberEditBt">마이 페이지</button>
                             <button class="btn btn-sm btn-light" type="button"
                                     onclick="location.href='list.html'" id="logoutBt"
                                     th:onclick="|location.href='@{/logout}'|">로그아웃</button>
