--- a/src/main/resources/templates/member/myBoard.html
+++ b/src/main/resources/templates/member/myBoard.html
@@ -92,12 +92,8 @@
             });
 
             // 카테고리 선택 시 바로전송
-            // 폼 submit 하면 categoryCode 파라미터가 붙으므로, 직접 리디렉션
             $("#myPageCategorySelect").on("change", function () {
-                let categoryCode = "/" + $("#myPageCategorySelect").val();
-                let action = $("#myPageCategoryForm").attr("action");
-                action += categoryCode;
-                location.href = action;
+                $("#myPageCategoryForm").submit();
             })
 
             // 검색
@@ -137,20 +133,29 @@
                 })
             }
 
-            // 검색중일때 .page-link.onclick, option 은 검색하면 criteria.option 으로 자동으로 들어감
+            // 페이지네이션 링크 클릭
             $(".page-link").on("click", function (event) {
+                event.preventDefault();
+
+                $("#pageInfo>input:first-child").attr("value", $(this).attr("data-pagenum"));
 
                 let option = $("#pageInfo>input[name = 'option']").val();
 
-                if (option == null || option == "") {
-                    // option 없음 = 원래이벤트
-                    location.href = event.target.href;
-                    return false;
+                // option 없음 = 검색 안함 (url 빈 파라미터 지우기)
+                if (!option) {
+                    $("#pageInfo>input.searching").remove();
                 }
 
-                $("#pageInfo>input:first-child").attr("value", $(this).attr("data-pagenum"));
                 $("#pageInfo").submit();
-                return false;
+            })
+
+            // 읽기 링크 클릭
+            $(".readLink").on("click", function (event) {
+                event.preventDefault();
+                let params = location.search;
+                if (params) {
+                    location.href = $(this).attr("href") + params
+                }
             })
         })
     </script>
@@ -164,7 +169,7 @@
 
     <div id="header">
         <h2 id="headerText"> 마이 페이지 > 내 게시글</h2>
-        <form id="myPageCategoryForm" action="/member/mypage/myboard" method="get" th:object="${criteria}">
+        <form id="myPageCategoryForm" th:action="@{/member/{memberId}/boards(memberId=${memberId})}" method="get" th:object="${criteria}">
             <input type="hidden" name="currentPage" value="1">
             <select th:field="*{categoryCode}" class="form-select" id="myPageCategorySelect" required>
                 <option value="all">전체</option>
@@ -181,13 +186,13 @@
 
     <ul  id="myPageNav" class="nav nav-pills nav-justified">
         <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/member/mypage/myboard">내 게시글</a>
+            <a class="nav-link" aria-current="page" th:href="@{|/member/${memberId}/boards|}">내 게시글</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/member/mypage/mycomment" >내 댓글</a>
+            <a class="nav-link" th:href="@{|/member/${memberId}/comments|}" >내 댓글</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/member/mypage/info" >내 정보</a>
+            <a class="nav-link" th:href="@{|/member/${memberId}|}" >내 정보</a>
         </li>
     </ul>
 
@@ -221,19 +226,12 @@
             <tr th:each="item : ${boardList}"
                 th:with="currentPage=${param.currentPage == null} ? 1 : ${param.currentPage}">
                 <td id="boardNum" th:text="${pageMaker.totalCount - criteria.contentPerPage * (pageMaker.currentPage - 1) - itemStat.index}">id</td>
-                <!--검색안함-->
-                <td th:if="${criteria.option == null}">
+
+                <td>
                     <!-- if(Category == ALL) categoryCode = "" ;-->
                     <span class="category-label" th:if="${pageMaker.categoryCode == 'all'}" th:text="${'[' + item.category.getCategoryName() + ']'}"></span>
                     <a id="readLink" href="list.html"
-                       th:href="@{|/board/read/${pageMaker.categoryCode}/${item.id}?currentPage=${currentPage}|}"
-                       th:text="${item.title}">title</a>
-                </td>
-                <!--검색중-->
-                <td th:if="${criteria.option != null}">
-                    <span class="category-label" th:if="${pageMaker.categoryCode == 'all'}" th:text="${'[' + item.category.getCategoryName() + ']'}"></span>
-                    <a id="readLink2" href="list.html"
-                       th:href="@{|/board/read/${pageMaker.categoryCode}/${item.id}?currentPage=${currentPage}&option=${criteria.option}&keyword=${criteria.keyword}|}"
+                       th:href="@{|/board/${item.id}|}"
                        th:text="${item.title}">title</a>
                 </td>
 
@@ -254,35 +252,29 @@
         <div class="container">
             <ul class="pagination col justify-content-center" id="paginationContainer">
                 <li class="page-item" th:if="${pageMaker.isPrevBt}">
-                    <a th:href="@{|/member/mypage/myboard/${pageMaker.categoryCode}?currentPage=${(pageMaker.startPageNum)-1}|}"
+                    <a href="list.html"
                        th:data-pageNum="${(pageMaker.startPageNum)-1}" class="page-link">&laquo;</a>
                 </li>
                 <!-- ${#numbers.sequence(from,to,[step])} 단순반복 numbers 유틸리티 클래스 배열 생성후 사용 -->
                 <!--    <li th:each="num : ${#numbers.sequence(${pageMaker.startPageNum},${pageMaker.endPageNum})}">-->
                 <li class="page-item page-item-number" th:each="num : ${#numbers.sequence(pageMaker.startPageNum, pageMaker.endPageNum)}">
-                    <a th:href="@{|/member/mypage/myboard/${pageMaker.categoryCode}?currentPage=${num}|}" th:text="${num}" th:data-pagenum="${num}"
+                    <a href="list.html" th:text="${num}" th:data-pagenum="${num}"
                        class="page-link page-link-number"> 페이지번호 </a>
                 </li>
                 <li class="page-item" th:if="${pageMaker.isNextBt()}">
-                    <a th:href="@{|/member/mypage/myboard/${pageMaker.categoryCode}?currentPage=${pageMaker.endPageNum+1}|}"
+                    <a href="list.html"
                        th:data-pageNum="${pageMaker.endPageNum+1}" class="page-link">&raquo;</a>
                 </li>
             </ul>
         </div>
     </div>
 
-    <!-- 글쓰기 버튼 -->
-<!--    <div class="float-right" id="write">-->
-<!--        <button type="button" class="btn btn-primary"-->
-<!--                th:onclick="|location.href='@{/board/write/{categoryCode}(categoryCode=${criteria.getCategoryCode})}'|">글쓰기</button>-->
-<!--    </div>-->
-
     <!-- 검색창 -->
     <div class="row justify-content-center input-group" style="clear:right;width:500px;margin:auto">
         <!-- th:action 태그는 javascript 를 통해 submit 할떄 적용되지 않는 것으로 보임 -->
         <!-- method = get 이므로 form 데이터가 queryString 에 붙어나감 -->
         <form id="searchForm" action="/board/list" method="get"
-              th:action="@{|/member/mypage/myboard/${pageMaker.categoryCode}|}" th:object="${criteria}">
+              th:action="@{|/member/${memberId}/boards|}" th:object="${criteria}">
             <input type="hidden" name="currentPage" value="1">
             <select th:field="*{option}" name="option" class="form-select" id="searchOption">
                 <option value="">전체보기</option>
@@ -290,6 +282,7 @@
                 <option value="content">내용</option>
             </select>
             <input id="searchKeyword" type="text" th:field="*{keyword}" name="keyword" class="form-control"/>
+            <input id="searchCategory" type="hidden" th:field="*{categoryCode}">
             <button class="btn btn-primary">검색</button>
         </form>
     </div>
@@ -297,8 +290,9 @@
     <!-- 검색 및 현재페이지 정보 -->
     <form id="pageInfo" method="get">
         <input type="hidden" th:name="currentPage" th:value="${criteria.currentPage}">
-        <input type="hidden" name="option" th:name="option" th:value="${criteria.option}">
-        <input type="hidden" th:name="keyword" th:value="${criteria.keyword}">
+        <input type="hidden" th:name="categoryCode" th:value="${criteria.categoryCode}">
+        <input type="hidden"  class="searching" name="option" th:name="option" th:value="${criteria.option}">
+        <input type="hidden" class="searching" th:name="keyword" th:value="${criteria.keyword}">
     </form>
 
 </div>
