--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -610,16 +610,20 @@
         <!-- 내부 네비 -->
         <div id="read-nav">
             <!-- 공지 수정/삭제 -->
-            <div th:if="${board.category.name().equals('NOTICE')}" sec:authorize="hasRole('ROLE_ADMIN')">
+            <div th:if="${board.category.name().equals('NOTICE')}">
                 <button type="button" class="btn btn-primary" th:data-url="'/boards'">목록</button>
-                <button type="button" class="btn btn-primary" th:data-url="'/board/' + ${board.id} + '/edit'">수정</button>
-                <button type="button" class="btn btn-primary delete" th:data-url="'/board/' + ${board.id} + '/delete'">삭제</button>
+                <button type="button" class="btn btn-primary" th:data-url="'/board/' + ${board.id} + '/edit'"
+                        sec:authorize="hasRole('ROLE_ADMIN')">수정</button>
+                <button type="button" class="btn btn-primary delete" th:data-url="'/board/' + ${board.id} + '/delete'"
+                        sec:authorize="hasRole('ROLE_ADMIN')">삭제</button>
             </div>
             <!-- 일반 수정/삭제 -->
             <div th:unless="${board.category.name().equals('NOTICE')}">
                 <button type="button" class="btn btn-primary" th:data-url="'/boards'">목록</button>
-                <button type="button" class="btn btn-primary" th:data-url="'/board/' + ${board.id} + '/edit'">수정</button>
-                <button type="button" class="btn btn-primary delete" th:data-url="'/board/' + ${board.id} + '/delete'">삭제</button>
+                <button type="button" class="btn btn-primary" th:data-url="'/board/' + ${board.id} + '/edit'"
+                        sec:authorize="authenticated">수정</button>
+                <button type="button" class="btn btn-primary delete" th:data-url="'/board/' + ${board.id} + '/delete'"
+                        sec:authorize="authenticated">삭제</button>
             </div>
         </div>
 
